tolk-tester/tests/invalid-syntax/err-3407.tolk
/*
in tolk we decided to drop nested comments support
/*
not nested
 */
*/

/**
@compilation_should_fail
@stderr error: expected top-level declaration, got `*`
*/
